# bbb-lely-core-ati-netcan

./: .gitignore  CMakeLists.txt  EPOS_dictionary.eds  InteractionController.h  PID.cpp  PID.h  README.md  README_motorzao.txt  epos_com_motorzao.dcf  main.cpp  master-dcf-motorzao-current-3000.yml  master-dcf-motorzao-current-5000.dcf  master-dcf-motorzao-current-5000.yml  master-dcf-motorzao.yml  master-dcf.yml  master-motorzao.dcf  qd-1.047199_K100.000000_B10.000000.csv  qd-1.047199_K100.000000_B2.000000.csv  qd-1.047199_K20.000000_B10.000000.csv  qd-1.047199_K20.000000_B2.000000.csv  qd-1.047199_K20.000000_B8.000000.csv  qd-1.047199_K80.000000_B2.000000.csv  qd-1.047199_K80.000000_B8.000000.csv
from_epos_studio/: epos-com-motorzinho_REVER.eds  epos_com_motorzao_limitado_3000.eds  epos_com_motorzao_limitado_5000.dcf  epos_com_motorzao_limitado_5000_EMOTAS.eds
log_from_bbb/: plot.gp  qd0.000000_K0.010000_B0.010000.csv  qd0.000000_K10.000000_B2.000000.csv
plotingData/: main.py
